--- a/.github/workflows/csharper.yml
+++ b/.github/workflows/csharper.yml
@@ -1,4 +1,5 @@
 name: Validate PR
+
 on:
   pull_request:
     branches: [ main ]
@@ -8,6 +9,4 @@ jobs:
     name: Check Formatting
     steps:
       - uses: actions/checkout@v2
-      - run: |
-        dotnet tool restore
-        dotnet csharpier --check .
+      - run: dotnet tool restore && dotnet csharpier --check .
