--- a/.github/workflows/csharper.yml
+++ b/.github/workflows/csharper.yml
@@ -1,8 +1,11 @@
 name: Validate PR
 
 on:
+  push:
+    branches: [ "develop", "main" ]
   pull_request:
-    branches: [ main ]
+    branches: [ "develop", "main" ]
+
 jobs:
   check_formatting:
     runs-on: ubuntu-latest
