--- a/.github/workflows/csharper.yml
+++ b/.github/workflows/csharper.yml
@@ -12,4 +12,4 @@ jobs:
     name: Check Formatting
     steps:
       - uses: actions/checkout@v2
-      - run: dotnet tool restore && dotnet csharpier --check .
+      - run: dotnet tool install csharpier -g && dotnet tool restore && dotnet csharpier --check .
