--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,7 +11,6 @@ on:
 
 jobs:
   check_formatting:
-  
     runs-on: ubuntu-latest
     
     steps:
@@ -24,8 +23,11 @@ jobs:
         run: dotnet csharpier --check .
 
   build:
-
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        platform: [ubuntu-latest, macos-latest, windows-latest]
+        
+    runs-on: ${{ matrix.platform }}
 
     steps:
     - uses: actions/checkout@v3
