--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -10,6 +10,17 @@ on:
     branches: [ "develop", "main" ]
 
 jobs:
+  pre-commit:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+ 
+      - uses: pre-commit/action@v3.0.0
+        with:
+          extra_Args: dotnet-tool-restore
+          extra_args: csharpier
+
   check_formatting:
     runs-on: ubuntu-latest
     
