--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,22 +1,10 @@
 repos:
-  - repo: local
+  - repo: https://github.com/oxsecurity/megalinter
+    rev: v6.8.0 # Git tag specifying the hook, not mega-linter-runner, version
     hooks:
-      - id: dotnet-tool-restore
-        name: Install .NET tools
-        entry: dotnet tool restore
-        language: system
-        always_run: true
-        pass_filenames: false
+      - id: megalinter-incremental # Faster, less thorough
         stages:
           - commit
+      - id: megalinter-full # Slower, more thorough
+        stages:
           - push
-          - post-checkout
-          - post-rewrite
-        description: Install the .NET tools listed at .config/dotnet-tools.json.
-      - id: csharpier
-        name: Run CSharpier on C# files
-        entry: dotnet tool run dotnet-csharpier
-        language: system
-        types:
-          - c#
-        description: CSharpier is an opinionated C# formatter inspired by Prettier.
