--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -52,7 +52,7 @@ jobs:
           VALIDATE_ALL_CODEBASE: true # Validates all source when push on main, else just the git diff with main. Override with true if you always want to lint all sources
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           # ADD YOUR CUSTOM ENV VARIABLES HERE OR DEFINE THEM IN A FILE .mega-linter.yml AT THE ROOT OF YOUR REPOSITORY
-          DISABLE: COPYPASTE,SPELL # Uncomment to disable copy-paste and spell checks
+          DISABLE: COPYPASTE,SPELL,V8R,CHECKOV
 
       # Upload MegaLinter artifacts
       - name: Archive production artifacts
