--- a/tests/UnitTests/Orderly.Domain.UnitTests/Orderly.Domain.UnitTests.csproj
+++ b/tests/UnitTests/Orderly.Domain.UnitTests/Orderly.Domain.UnitTests.csproj
@@ -27,4 +27,9 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\Orderly.Domain\Orderly.Domain.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="TestUtils\Cnpj\CnpjAssertion.cs" />
+    <Compile Remove="TestUtils\Cnpj\CnpjGenerator.cs" />
+  </ItemGroup>
 </Project>
