Crated new interfaces for better CQRS clarity

--- a/src/Developurr.Orderly.Application/Developurr.Orderly.Application.csproj
+++ b/src/Developurr.Orderly.Application/Developurr.Orderly.Application.csproj
@@ -11,4 +11,8 @@
         <ProjectReference Include="..\Developurr.Orderly.Domain\Developurr.Orderly.Domain.csproj" />
     </ItemGroup>
     
+    <ItemGroup>
+      <Folder Include="Exception\" />
+    </ItemGroup>
+    
 </Project>
